# active-learning-metaflow

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pre-commit.yml  publish.yml
docker/: Dockerfile
metaflow/: active_learning_flow.py  load_unlabeled_pool_drivers.py  model_cnn_drivers.py  sampling_method.py  sampling_strategy.py  testing.py  training.py  utils.py
metaflow_folder/: 00-notebook.ipynb  active_learning_flow.py  custom_dataset.py  load_unlabeled_pool_drivers.py  model_cnn_drivers.py  sampling_method.py  sampling_strategy.py  testing.py  training.py  utils.py
