[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-learning-metaflow"
authors = [
    {name = "Compare San", email = "filippo.buonco95@gmail.com"},
]
description = "Metaflow Active Learning Flow"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["one", "two"]
license = {text = "BSD-3-Clause"}


dependencies = [
    'torch',
    'metaflow',
    'numpy',
    'opencv-python',
    'scikit-learn'
    ]
#dynamic = ["version"]
version = "0.0.0"

[project.optional-dependencies]
release = ["build", "twine"]
dev = ["active-learning-metaflow[release]"]

[tool.setuptools]
package-dir = {"" = "metaflow_folder"}
